--- a/sample/src/shared/components.json
+++ b/sample/src/shared/components.json
@@ -1,5 +1,9 @@
 {
   "Most popular": {
-    "Click counter": { "status": "done", "moduleId": "click-counter" }
+    "Click counter": { "status": "done", "moduleId": "click-counter" },
+    "Button":{"status":"done","moduleId":"button"}
+  },
+  "Navigation":{
+     "Button":{"status":"done","moduleId":"button"}
   }
 }
