ejMenu, catalog application menu navigation completed
ejMenu, catalog application menu navigation completed

--- a/sample/src/shared/components.json
+++ b/sample/src/shared/components.json
@@ -4,6 +4,7 @@
     "Button":{"status":"done","moduleId":"button"}
   },
   "Navigation":{
-     "Button":{"status":"done","moduleId":"button"}
+     "Button":{"status":"done","moduleId":"button"},
+     "Menu" : {"status" : "done", "moduleId" : "menu"}
   }
 }
