Revert "ejMenu, catalog application menu navigation completed"
This reverts commit 92ff77ab762a79ff41e07ecae29186ef3edc91e4.

--- a/sample/src/shared/components.json
+++ b/sample/src/shared/components.json
@@ -4,7 +4,6 @@
     "Button":{"status":"done","moduleId":"button"}
   },
   "Navigation":{
-     "Button":{"status":"done","moduleId":"button"},
-     "Menu" : {"status" : "done", "moduleId" : "menu"}
+     "Button":{"status":"done","moduleId":"button"}
   }
 }
