--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
       "bootstrap": "twbs/bootstrap@^3.3.6",
       "core-js": "npm:core-js@^1.1.4",
       "jquery": "components/jquery@^2.1.4",
+      "jquery-easing": "npm:jquery.easing@^1.3.2",
       "polymer/mutationobservers": "^0.4.2",
       "text": "systemjs/plugin-text@^0.0.4"
     }
