--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "babel-dts-generator": "^0.2.17",
     "babel-eslint": "^4.1.1",
     "babel-runtime": "^5.8.20",
-    "browser-sync": "^2.9.3",
+    "browser-sync": "2.11.2",
     "left-pad": "git://github.com/azer/left-pad.git#bff80e3ef0db0bfaba7698606c4f623433d14355",
     "conventional-changelog": "0.0.11",
     "del": "^1.1.0",
