Template files and grid control added
Added templating and child template in source and added grid control in
catalog application

--- a/sample/src/shared/components.json
+++ b/sample/src/shared/components.json
@@ -1,7 +1,8 @@
 {
   "Most popular": {
     "Click counter": { "status": "done", "moduleId": "click-counter" },
-    "Button":{"status":"done","moduleId":"button"}
+    "Button":{"status":"done","moduleId":"button"},
+    "Grid":{"status":"done","moduleId":"grid"}
   },
   "Navigation":{
      "Button":{"status":"done","moduleId":"button"},
