ejTab, common imports and catalog code preview tab section, jsrender dependency changes committed
ejTab, common imports and catalog code preview tab, jsrender dependency
changes committed

--- a/sample/src/shared/components.json
+++ b/sample/src/shared/components.json
@@ -6,6 +6,7 @@
   },
   "Navigation":{
      "Button":{"status":"done","moduleId":"button"},
-     "Menu" : {"status" : "done", "moduleId" : "menu"}
+     "Menu" : {"status" : "done", "moduleId" : "menu"},
+     "Tab" : {"status" : "done", "moduleId" : "tab"}
   }
 }
