--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
       "aurelia-logging": "npm:aurelia-logging@^1.0.0-beta.1.1.1",
       "aurelia-metadata": "npm:aurelia-metadata@^1.0.0-beta.1.1.3",
       "aurelia-task-queue": "npm:aurelia-task-queue@^1.0.0-beta.1.1.0",
-      "aurelia-templating": "npm:aurelia-templating@^1.0.0-beta.1.1.0"
+      "aurelia-templating": "npm:aurelia-templating@^1.0.0-beta.1.1.0",
+      "jsrender": "npm:jsrender@^0.9.75"
     },
     "devDependencies": {
       "aurelia-loader": "npm:aurelia-loader@1.0.0-beta.1.1.0",
