--- a/sample/package.json
+++ b/sample/package.json
@@ -19,6 +19,7 @@
       "jquery": "github:components/jquery@2.1.4",
       "jquery-easing": "npm:jquery.easing@^1.3.2",
       "json": "github:systemjs/plugin-json@^0.1.0",
+      "jsrender": "npm:jsrender@^0.9.75",
       "prettify": "npm:prettify@^0.1.7",
       "prism": "github:PrismJS/prism@1.3.0",
       "showdown": "github:showdownjs/showdown@1.3.0",
