--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
       "jsrender": "npm:jsrender@^0.9.75"
     },
     "devDependencies": {
-      "aurelia-loader": "npm:aurelia-loader@1.0.0-beta.1.1.0",
+      "aurelia-loader": "npm:aurelia-loader@^1.0.0-beta.1.1.0",
       "aurelia-pal": "npm:aurelia-pal@^1.0.0-beta.1.1.1",
       "aurelia-pal-browser": "npm:aurelia-pal-browser@^1.0.0-beta.1.1.2",
       "aurelia-path": "npm:aurelia-path@^1.0.0-beta.1.1.0",
@@ -53,7 +53,6 @@
       "babel": "npm:babel-core@^5.8.24",
       "babel-runtime": "npm:babel-runtime@^5.8.24",
       "bootstrap": "twbs/bootstrap@^3.3.6",
-      "core-js": "npm:core-js@^1.1.4",
       "jquery": "components/jquery@^2.1.4",
       "jquery-easing": "npm:jquery.easing@^1.3.2",
       "polymer/mutationobservers": "^0.4.2",
