--- a/package.json
+++ b/package.json
@@ -35,22 +35,25 @@
       "lib": "dist/amd"
     },
     "dependencies": {
-      "aurelia-binding": "npm:aurelia-binding@^1.0.0-beta.1.1.1",
-      "aurelia-dependency-injection": "npm:aurelia-dependency-injection@^1.0.0-beta.1.1.2",
-      "aurelia-logging": "npm:aurelia-logging@^1.0.0-beta.1.1.1",
-      "aurelia-metadata": "npm:aurelia-metadata@^1.0.0-beta.1.1.3",
-      "aurelia-task-queue": "npm:aurelia-task-queue@^1.0.0-beta.1.1.0",
-      "aurelia-templating": "npm:aurelia-templating@^1.0.0-beta.1.1.0",
+      "aurelia-binding": "npm:aurelia-binding@1.0.4",
+      "aurelia-bootstrapper": "npm:aurelia-bootstrapper@1.0.0",
+      "aurelia-dependency-injection": "npm:aurelia-dependency-injection@1.0.0",
+      "aurelia-framework": "npm:aurelia-framework@1.0.2",
+      "aurelia-http-client": "npm:aurelia-http-client@1.0.0",
+      "aurelia-logging": "npm:aurelia-logging@1.0.0",
+      "aurelia-metadata": "npm:aurelia-metadata@1.0.0",
+      "aurelia-task-queue": "npm:aurelia-task-queue@1.0.0",
+      "aurelia-templating": "npm:aurelia-templating@1.1.0",
       "jquery-validation": "npm:jquery-validation@^1.15.0",
       "jquery-validation-unobtrusive": "npm:jquery-validation-unobtrusive@3.2.6",
       "jsrender": "npm:jsrender@^0.9.75"
     },
     "devDependencies": {
-      "aurelia-loader": "npm:aurelia-loader@^1.0.0-beta.1.1.0",
-      "aurelia-pal": "npm:aurelia-pal@^1.0.0-beta.1.1.1",
-      "aurelia-pal-browser": "npm:aurelia-pal-browser@^1.0.0-beta.1.1.2",
-      "aurelia-path": "npm:aurelia-path@^1.0.0-beta.1.1.0",
-      "aurelia-polyfills": "npm:aurelia-polyfills@^1.0.0-beta.1.0.6",
+      "aurelia-loader": "npm:aurelia-loader@1.0.0",
+      "aurelia-pal": "npm:aurelia-pal@1.0.0",
+      "aurelia-pal-browser": "npm:aurelia-pal-browser@1.0.0",
+      "aurelia-path": "npm:aurelia-path@1.0.0",
+      "aurelia-polyfills": "npm:aurelia-polyfills@1.1.0",
       "babel": "npm:babel-core@^5.8.24",
       "babel-runtime": "npm:babel-runtime@^5.8.24",
       "bootstrap": "twbs/bootstrap@^3.3.6",
@@ -91,6 +94,7 @@
     "gulp-typedoc": "^1.2.1",
     "gulp-typedoc-extractor": "0.0.8",
     "gulp-typescript": "^2.13.6",
+    "gulp-util": "^3.0.7",
     "isparta": "^4.0.0",
     "istanbul": "^0.4.1",
     "jasmine-core": "^2.1.3",
