--- a/sample/package.json
+++ b/sample/package.json
@@ -1,19 +1,19 @@
 {
   "jspm": {
     "dependencies": {
-      "aurelia-binding": "npm:aurelia-binding@^1.0.0-beta.1.0.3",
-      "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0-beta.1",
-      "aurelia-dependency-injection": "npm:aurelia-dependency-injection@^1.0.0-beta.1",
-      "aurelia-event-aggregator": "npm:aurelia-event-aggregator@^1.0.0-beta.1",
-      "aurelia-framework": "npm:aurelia-framework@^1.0.0-beta.1.0.6",
-      "aurelia-http-client": "npm:aurelia-http-client@^1.0.0-beta.1",
-      "aurelia-loader": "npm:aurelia-loader@^1.0.0-beta.1",
-      "aurelia-logging": "npm:aurelia-logging@^1.0.0-beta.1",
-      "aurelia-metadata": "npm:aurelia-metadata@^1.0.0-beta.1",
-      "aurelia-pal": "npm:aurelia-pal@^1.0.0-beta.1.0.2",
-      "aurelia-task-queue": "npm:aurelia-task-queue@^1.0.0-beta.1.0.1",
-      "aurelia-templating": "npm:aurelia-templating@^1.0.0-beta.1.0.2",
-      "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.0.0-beta.1.2.1",
+      "aurelia-binding": "npm:aurelia-binding@1.0.4",
+      "aurelia-bootstrapper": "npm:aurelia-bootstrapper@1.0.0",
+      "aurelia-dependency-injection": "npm:aurelia-dependency-injection@1.0.0",
+      "aurelia-event-aggregator": "npm:aurelia-event-aggregator@1.0.0",
+      "aurelia-framework": "npm:aurelia-framework@1.0.2",
+      "aurelia-http-client": "npm:aurelia-http-client@1.0.0",
+      "aurelia-loader": "npm:aurelia-loader@1.0.0",
+      "aurelia-logging": "npm:aurelia-logging@1.0.0",
+      "aurelia-metadata": "npm:aurelia-metadata@1.0.0",
+      "aurelia-pal": "npm:aurelia-pal@1.0.0",
+      "aurelia-task-queue": "npm:aurelia-task-queue@1.0.0",
+      "aurelia-templating": "npm:aurelia-templating@1.1.0",
+      "aurelia-templating-resources": "npm:aurelia-templating-resources@1.0.0",
       "bootstrap": "github:twbs/bootstrap@^3.3.6",
       "css": "github:systemjs/plugin-css@0.1.20",
       "font-awesome": "npm:font-awesome@^4.5.0",
@@ -31,7 +31,7 @@
       "text": "github:systemjs/plugin-text@^0.0.4"
     },
     "devDependencies": {
-      "aurelia-polyfills": "npm:aurelia-polyfills@^1.0.0-beta.1.0.6",
+      "aurelia-polyfills": "npm:aurelia-polyfills@1.1.0",
       "babel": "npm:babel-core@^5.8.24",
       "babel-runtime": "npm:babel-runtime@^5.8.24",
       "core-js": "npm:core-js@^1.1.4"
