feat(all): updated to aurelia dependencies to 1.0.0

--- a/package.json
+++ b/package.json
@@ -35,15 +35,15 @@
       "lib": "dist/amd"
     },
     "dependencies": {
-      "aurelia-binding": "npm:aurelia-binding@1.0.4",
-      "aurelia-bootstrapper": "npm:aurelia-bootstrapper@1.0.0",
-      "aurelia-dependency-injection": "npm:aurelia-dependency-injection@1.0.0",
-      "aurelia-framework": "npm:aurelia-framework@1.0.2",
-      "aurelia-http-client": "npm:aurelia-http-client@1.0.0",
-      "aurelia-logging": "npm:aurelia-logging@1.0.0",
-      "aurelia-metadata": "npm:aurelia-metadata@1.0.0",
-      "aurelia-task-queue": "npm:aurelia-task-queue@1.0.0",
-      "aurelia-templating": "npm:aurelia-templating@1.1.0",
+      "aurelia-binding": "npm:aurelia-binding@^1.0.4",
+      "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0",
+      "aurelia-dependency-injection": "npm:aurelia-dependency-injection@^1.0.0",
+      "aurelia-framework": "npm:aurelia-framework@^1.0.2",
+      "aurelia-http-client": "npm:aurelia-http-client@^1.0.0",
+      "aurelia-logging": "npm:aurelia-logging@^1.0.0",
+      "aurelia-metadata": "npm:aurelia-metadata@^1.0.0",
+      "aurelia-task-queue": "npm:aurelia-task-queue@^1.0.0",
+      "aurelia-templating": "npm:aurelia-templating@^1.1.0",
       "jquery-validation": "npm:jquery-validation@^1.15.0",
       "jquery-validation-unobtrusive": "npm:jquery-validation-unobtrusive@3.2.6",
       "jsrender": "npm:jsrender@^0.9.75"
