--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aurelia-syncfusion-bridge",
-  "version": "1.2.0",
+  "version": "2.2.0",
   "registry": "github",
   "description": "A set of Syncfusion wrappers for Aurelia allowing developers to easily use Syncfusion components in their Aurelia application",
   "keywords": [
@@ -36,36 +36,25 @@
     },
     "dependencies": {
       "aurelia-binding": "npm:aurelia-binding@^1.0.4",
-      "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0",
       "aurelia-dependency-injection": "npm:aurelia-dependency-injection@^1.0.0",
-      "aurelia-framework": "npm:aurelia-framework@^1.0.2",
-      "aurelia-http-client": "npm:aurelia-http-client@^1.0.0",
-      "aurelia-logging": "npm:aurelia-logging@^1.0.0",
       "aurelia-metadata": "npm:aurelia-metadata@^1.0.0",
       "aurelia-task-queue": "npm:aurelia-task-queue@^1.0.0",
       "aurelia-templating": "npm:aurelia-templating@^1.1.0",
-      "jquery-validation": "npm:jquery-validation@^1.15.0",
-      "jquery-validation-unobtrusive": "npm:jquery-validation-unobtrusive@3.2.6",
-      "jsrender": "npm:jsrender@^0.9.75"
-    },
-    "devDependencies": {
-      "aurelia-loader": "npm:aurelia-loader@1.0.0",
-      "aurelia-pal": "npm:aurelia-pal@1.3.0",
-      "aurelia-pal-browser": "npm:aurelia-pal-browser@1.0.0",
-      "aurelia-path": "npm:aurelia-path@1.0.0",
-      "aurelia-polyfills": "npm:aurelia-polyfills@1.1.0",
-      "babel": "npm:babel-core@^5.8.24",
-      "babel-runtime": "npm:babel-runtime@^5.8.24",
-      "bootstrap": "twbs/bootstrap@^3.3.6",
-      "core-js": "npm:core-js@^1.1.4",
-      "jquery": "components/jquery@^2.1.4",
-      "jquery-easing": "npm:jquery.easing@^1.3.2",
-      "polymer/mutationobservers": "^0.4.2",
-      "text": "systemjs/plugin-text@^0.0.4"
+      "aurelia-pal": "npm:aurelia-pal@^1.3.0"
     }
+  },
+  "dependencies": {
+    "aurelia-binding": "^1.0.4",
+    "aurelia-dependency-injection": "^1.0.0",
+    "aurelia-metadata": "^1.0.0",
+    "aurelia-task-queue": "^1.0.0",
+    "aurelia-templating": "^1.1.0",
+    "aurelia-pal": "^1.3.0"
   },
   "devDependencies": {
     "aurelia-tools": "^0.1.18",
+    "babel-dts-generator": "^0.5.1",
+    "babel-eslint": "^4.1.1",
     "babel-plugin-syntax-flow": "^6.8.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-es2015-modules-amd": "^6.8.0",
@@ -76,8 +65,6 @@
     "babel-preset-es2015-loose": "^7.0.0",
     "babel-preset-es2015-loose-native-modules": "^1.0.0",
     "babel-preset-stage-1": "^6.5.0",
-    "babel-dts-generator": "^0.5.1",
-    "babel-eslint": "^4.1.1",
     "babel-runtime": "^5.8.20",
     "browser-sync": "2.11.2",
     "conventional-changelog": "0.0.11",
@@ -110,7 +97,7 @@
     "left-pad": "git://github.com/azer/left-pad.git#bff80e3ef0db0bfaba7698606c4f623433d14355",
     "object.assign": "^1.0.3",
     "phantomjs-polyfill": "0.0.1",
-    "require-dir": "^0.1.0",
+    "require-dir": "^0.3.2",
     "run-sequence": "^1.0.2",
     "through2": "^2.0.0",
     "typescript": "^1.9.0-dev.20160613-1.0",
