--- a/sample/package.json
+++ b/sample/package.json
@@ -14,11 +14,10 @@
       "aurelia-task-queue": "npm:aurelia-task-queue@1.0.0",
       "aurelia-templating": "npm:aurelia-templating@1.1.0",
       "aurelia-templating-resources": "npm:aurelia-templating-resources@1.0.0",
-      "bootstrap": "github:twbs/bootstrap@^3.3.6",
+      "bootstrap": "github:twbs/bootstrap@3.3.7",
       "css": "github:systemjs/plugin-css@0.1.20",
       "google/code-prettify": "github:google/code-prettify@master",
-      "jquery": "github:components/jquery@2.1.4",
-      "jquery-easing": "npm:jquery.easing@^1.3.2",
+      "jquery": "npm:jquery@^3.2.1",
       "jquery-validation": "npm:jquery-validation@1.15.0",
       "jquery-validation-unobtrusive": "npm:jquery-validation-unobtrusive@3.2.6",
       "json": "github:systemjs/plugin-json@^0.1.0",
@@ -30,10 +29,14 @@
       "text": "github:systemjs/plugin-text@^0.0.4"
     },
     "devDependencies": {
+      "aurelia-pal-browser": "npm:aurelia-pal-browser@1.0.0",
+      "aurelia-path": "npm:aurelia-path@1.0.0",
       "aurelia-polyfills": "npm:aurelia-polyfills@1.1.0",
       "babel": "npm:babel-core@^5.8.24",
       "babel-runtime": "npm:babel-runtime@^5.8.24",
-      "core-js": "npm:core-js@^1.1.4"
+      "core-js": "npm:core-js@^1.1.4",
+      "polymer/mutationobservers": "github:polymer/mutationobservers@^0.4.2",
+      "text": "github:systemjs/plugin-text@0.0.4"
     },
     "overrides": {
       "github:google/code-prettify@master": {
